add map where we show listing

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 CLOUD_NAME=diwrdvjca
 CLOUD_API_KEY=599512688423725
 CLOUD_API_SECRET=TnXNE_cnixefxetpeMqqQPoDWkk
-
+MAP_API_KEY=oZ727ZCd3amPQBlZ1zgs
